# Embedded_task

./: Cargo.toml  SOLUTION.md  test_client_add_request.txt  test_client_connection.txt  test_client_echo_message.txt  test_multiple_clients.txt  test_multiple_clients_with_different_message_types.txt  test_multiple_echo_messages.txt  tests_log.txt
src/: server.rs
tests/: client.rs  client_test.rs
