[package]
name = "embedded-recruitment-task"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4.2"
env_logger = "0.9"
prost = "0.13.4"
prost-types = "0.13.4"
lazy_static = "1.4.0"

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
